--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
 <body>
     <div class="containor" id="containor">
         <div class="btn">
-            <button id="btn" class="btn">create</button>
+            <button id="btn" class="btn"><img src="icons/icons8-create-100.png" id="img-create"></button>
         </div>
         <ul id="notes" class="notes">
-<!--             <li class="note">note 1 <img src="circle-ellipsis.png" id="img"></li>
+<!--             <li class="note">note 1<img src="icons/trash-xmark.png" id="delete-btn"></li>
             <li class="note">note 2 <button class='delete-btn'>Delete Note</button></li>
             <li class="note">note 3 <button class='delete-btn'>Delete Note</button></li> -->
         </ul>
+    </div>
+    <div class="text-container" id="text-dev">
+        <!-- <p contenteditable="true" class="note-box" id="text"></p> -->
     </div>
 </body>
 </html>
