--- a/index.html
+++ b/index.html
@@ -3,23 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
+    <title>Document</title>
 </head>
 <body>
-    <div class="containor" id="containor">
-        <div class="btn">
-            <button id="btn" class="btn"><img src="icons/icons8-create-100.png" id="img-create"></button>
+    <div class="container">
+        <div class="text">
+            <!-- <p contenteditable="true" class="note-box" id="text"></p> -->
         </div>
-        <ul id="notes" class="notes">
-<!--             <li class="note">note 1<img src="icons/trash-xmark.png" id="delete-btn"></li>
-            <li class="note">note 2 <button class='delete-btn'>Delete Note</button></li>
-            <li class="note">note 3 <button class='delete-btn'>Delete Note</button></li> -->
-        </ul>
-    </div>
-    <div class="text-container" id="text-dev">
-        <!-- <p contenteditable="true" class="note-box" id="text"></p> -->
+        <div class="notes">
+            <img src="icons/icons8-create-100.png" class="NoteImg">
+            <div class="btn">
+                <button type="button" class="button">
+                    <span class="button__text">Create</span>
+                    <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg"><line y2="19" y1="5" x2="12" x1="12"></line><line y2="12" y1="12" x2="19" x1="5"></line></svg></span>
+                  </button>
+            </div>
+            <ul class="notes-ul">
+                <!-- <li>
+                    <div class="card">
+                        <div class="card2">
+                            <span>Note</span>
+                            <img src="icons8-trash-100.png" class="del">
+                        </div>
+                      </div> -->
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
