--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <div class="text">
-            <!-- <p contenteditable="true" class="note-box" id="text"></p> -->
+            <p contenteditable="false" class="note-box" id="text"></p>
+            <div class="bottom">
+                <img src="icons/icons8-done-500.png" class="done-img">
+            </div>
         </div>
         <div class="notes">
             <img src="icons/icons8-create-100.png" class="NoteImg">
             <div class="btn">
                 <button type="button" class="button">
                     <span class="button__text">Create</span>
-                    <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg"><line y2="19" y1="5" x2="12" x1="12"></line><line y2="12" y1="12" x2="19" x1="5"></line></svg></span>
+                    <span class="button__icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg"><line y2="19" y1="5" x2="12" x1="12"></line><line y2="12" y1="12" x2="19" x1="5"></line></svg>
+                    </span>
                   </button>
             </div>
             <ul class="notes-ul">
@@ -25,12 +29,13 @@
                     <div class="card">
                         <div class="card2">
                             <span>Note</span>
-                            <img src="icons8-trash-100.png" class="del">
+                            <img src="icons/icons8-trash-100.png" class="del">
                         </div>
-                      </div> -->
-                </li>
+                      </div>
+                </li> -->
             </ul>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
