--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="icon" href="icons/icons8-create-100.png" type="image/x-icon">
+    <link rel="shortcut icon" href="icons/icons8-create-100.png" type="image/x-icon">
+    <title>Note</title>
 </head>
 <body>
     <div class="container">
@@ -15,24 +17,20 @@
             </div>
         </div>
         <div class="notes">
-            <img src="icons/icons8-create-100.png" class="NoteImg">
-            <div class="btn">
-                <button type="button" class="button">
-                    <span class="button__text">Create</span>
-                    <span class="button__icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg"><line y2="19" y1="5" x2="12" x1="12"></line><line y2="12" y1="12" x2="19" x1="5"></line></svg>
+            <div class="create">
+                <img src="icons/icons8-create-100.png" class="NoteImg">
+                <span class="N">Note</span>
+                <div class="btn">
+                    <button type="button" class="button">
+                        <span class="button__text">Create</span>
+                        <span class="button__icon">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                            width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg"><line y2="19" y1="5" x2="12" x1="12"></line><line y2="12" y1="12" x2="19" x1="5"></line></svg>
                     </span>
                   </button>
             </div>
+            </div>
             <ul class="notes-ul">
-                <!-- <li>
-                    <div class="card">
-                        <div class="card2">
-                            <span>Note</span>
-                            <img src="icons/icons8-trash-100.png" class="del">
-                        </div>
-                      </div>
-                </li> -->
             </ul>
         </div>
     </div>
