--- a/index.html
+++ b/index.html
@@ -13,7 +13,62 @@
         <div class="text">
             <p contenteditable="false" class="note-box" id="text"></p>
             <div class="bottom">
-                <img src="icons/icons8-done-500.png" class="done-img">
+                <div class="name-div">
+                    <span class="Span-size">Font Name</span>
+                    <select id="dropDownFont" class="dropdown fontName">
+                        <option class="options FranklinGothicMedium" value="Franklin Gothic Medium">Franklin Gothic Medium</option>
+                        <option class="options cursive" value="cursive">cursive</option>
+                        <option class="options Arial" value="Arial">Arial</option>
+                        <option class="options CourierNewMonospace" value="Courier New, monospace">Courier New, monospace</option>
+                        <option class="options monospace" value="monospace">monospace</option>
+                        <option class="options oblique" value="oblique">oblique</option>
+                      </select>
+                </div>
+                
+                <div class="size-div">
+                    <span class="Span-size">Font Size</span>
+                <select id="dropDownSize" class="dropdown fontSize">
+                  <option class="options" value="8pt">8</option>
+                  <option class="options" value="10pt">10</option>
+                  <option class="options" value="12pt">12</option>
+                  <option class="options" value="14pt">14</option>
+                  <option class="options" value="16pt">16</option>
+                  <option class="options" value="18pt">18</option>
+                  <option class="options" value="20pt">20</option>
+                  <option class="options" value="22pt">22</option>
+                  <option class="options" value="24pt">24</option>
+                  <option class="options" value="26pt">26</option>
+                  <option class="options" value="36pt">36</option>
+                  <option class="options" value="48pt">48</option>
+                  <option class="options" value="72pt">72</option>
+                </select>
+                </div>
+                <div class="size-div">
+                    <span class="Span-align">align</span>
+                <select id="dropDownalign" class="dropdown fontSize">
+                    <option class="options" value="left">align left</option>
+                  <option class="options" value="right">align right</option>
+                  <option class="options" value="center">align center</option>
+                </select>
+                </div>
+                <div class="size-div">
+                    <span class="Span-color">color</span>
+                <select id="dropDownacolor" class="dropdown fontSize">
+                    <option class="options" value="black">black</option>
+                    <option class="options" value="white">white</option>
+                    <option class="options" value="red">red</option>
+                  <option class="options" value="green">green</option>
+                  <option class="options" value="blue">blue</option>
+                  <option class="options" value="yellow">yellow</option>
+                  <option class="options" value="orange">orange</option>
+                  <option class="options" value="brown">brown</option>
+                </select>
+                </div>
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider"></span>
+                </label>                  
+                <img src = 'icons/black-done.png' class="done-img">
             </div>
         </div>
         <div class="notes">
