--- a/index.html
+++ b/index.html
@@ -1,94 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icons/icons8-create-100.png" type="image/x-icon">
-    <link rel="shortcut icon" href="icons/icons8-create-100.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="icons/icons8-create-100.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="icons/icons8-create-100.png"
+      type="image/x-icon"
+    />
     <title>Note</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="text">
-            <p contenteditable="false" class="note-box" id="text"></p>
-            <div class="bottom">
-                <div class="name-div">
-                    <span class="Span-size">Font Name</span>
-                    <select id="dropDownFont" class="dropdown fontName">
-                        <option class="options FranklinGothicMedium" value="Franklin Gothic Medium">Franklin Gothic Medium</option>
-                        <option class="options cursive" value="cursive">cursive</option>
-                        <option class="options Arial" value="Arial">Arial</option>
-                        <option class="options CourierNewMonospace" value="Courier New, monospace">Courier New, monospace</option>
-                        <option class="options monospace" value="monospace">monospace</option>
-                        <option class="options oblique" value="oblique">oblique</option>
-                      </select>
-                </div>
-                
-                <div class="size-div">
-                    <span class="Span-size">Font Size</span>
-                <select id="dropDownSize" class="dropdown fontSize">
-                  <option class="options" value="8pt">8</option>
-                  <option class="options" value="10pt">10</option>
-                  <option class="options" value="12pt">12</option>
-                  <option class="options" value="14pt">14</option>
-                  <option class="options" value="16pt">16</option>
-                  <option class="options" value="18pt">18</option>
-                  <option class="options" value="20pt">20</option>
-                  <option class="options" value="22pt">22</option>
-                  <option class="options" value="24pt">24</option>
-                  <option class="options" value="26pt">26</option>
-                  <option class="options" value="36pt">36</option>
-                  <option class="options" value="48pt">48</option>
-                  <option class="options" value="72pt">72</option>
-                </select>
-                </div>
-                <div class="size-div">
-                    <span class="Span-align">align</span>
-                <select id="dropDownalign" class="dropdown fontSize">
-                    <option class="options" value="left">align left</option>
-                  <option class="options" value="right">align right</option>
-                  <option class="options" value="center">align center</option>
-                </select>
-                </div>
-                <div class="size-div">
-                    <span class="Span-color">color</span>
-                <select id="dropDownacolor" class="dropdown fontSize">
-                    <option class="options" value="black">black</option>
-                    <option class="options" value="white">white</option>
-                    <option class="options" value="red">red</option>
-                  <option class="options" value="green">green</option>
-                  <option class="options" value="blue">blue</option>
-                  <option class="options" value="yellow">yellow</option>
-                  <option class="options" value="orange">orange</option>
-                  <option class="options" value="brown">brown</option>
-                </select>
-                </div>
-                <label class="switch">
-                    <input type="checkbox">
-                    <span class="slider"></span>
-                </label>                  
-                <img src = 'icons/black-done.png' class="done-img">
-            </div>
+      <div class="text">
+        <p contenteditable="false" class="note-box" id="text"></p>
+        <div class="bottom">
+          <div class="name-div">
+            <span class="Span-size">Font Name</span>
+            <select id="dropDownFont" class="dropdown fontName">
+              <option
+                class="options FranklinGothicMedium"
+                value="Franklin Gothic Medium"
+              >
+                Franklin Gothic Medium
+              </option>
+              <option class="options cursive" value="cursive">cursive</option>
+              <option class="options Arial" value="Arial">Arial</option>
+              <option
+                class="options CourierNewMonospace"
+                value="Courier New, monospace"
+              >
+                Courier New, monospace
+              </option>
+              <option class="options monospace" value="monospace">
+                monospace
+              </option>
+              <option class="options oblique" value="oblique">oblique</option>
+            </select>
+          </div>
+
+          <div class="size-div">
+            <span class="Span-size">Font Size</span>
+            <select id="dropDownSize" class="dropdown fontSize">
+              <option class="options" value="8pt">8</option>
+              <option class="options" value="10pt">10</option>
+              <option class="options" value="12pt">12</option>
+              <option class="options" value="14pt">14</option>
+              <option class="options" value="16pt">16</option>
+              <option class="options" value="18pt">18</option>
+              <option class="options" value="20pt">20</option>
+              <option class="options" value="22pt">22</option>
+              <option class="options" value="24pt">24</option>
+              <option class="options" value="26pt">26</option>
+              <option class="options" value="36pt">36</option>
+              <option class="options" value="48pt">48</option>
+              <option class="options" value="72pt">72</option>
+            </select>
+          </div>
+          <div class="size-div">
+            <span class="Span-align">align</span>
+            <select id="dropDownalign" class="dropdown fontSize">
+              <option class="options" value="left">align left</option>
+              <option class="options" value="right">align right</option>
+              <option class="options" value="center">align center</option>
+            </select>
+          </div>
+          <div class="size-div">
+            <span class="Span-color">color</span>
+            <select id="dropDownacolor" class="dropdown fontSize">
+              <option class="options" value="black">black</option>
+              <option class="options" value="white">white</option>
+              <option class="options" value="red">red</option>
+              <option class="options" value="green">green</option>
+              <option class="options" value="blue">blue</option>
+              <option class="options" value="yellow">yellow</option>
+              <option class="options" value="orange">orange</option>
+              <option class="options" value="brown">brown</option>
+            </select>
+          </div>
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider"></span>
+          </label>
+          <img src="icons/black-done.png" class="done-img" />
         </div>
-        <div class="notes">
-            <div class="create">
-                <img src="icons/icons8-create-100.png" class="NoteImg">
-                <span class="N">Note</span>
-                <div class="btn">
-                    <button type="button" class="button">
-                        <span class="button__text">Create</span>
-                        <span class="button__icon">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                            width="24" viewBox="0 0 24 24" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" height="24" fill="none" class="svg"><line y2="19" y1="5" x2="12" x1="12"></line><line y2="12" y1="12" x2="19" x1="5"></line></svg>
-                    </span>
-                  </button>
-            </div>
-            </div>
-            <ul class="notes-ul">
-            </ul>
+      </div>
+      <div class="notes">
+        <div class="create">
+          <img src="icons/icons8-create-100.png" class="NoteImg" />
+          <span class="N">Note</span>
+          <div class="btn">
+            <button type="button" class="button">
+              <span class="button__text">Create</span>
+              <span class="button__icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke-linejoin="round"
+                  stroke-linecap="round"
+                  stroke="currentColor"
+                  height="24"
+                  fill="none"
+                  class="svg"
+                >
+                  <line y2="19" y1="5" x2="12" x1="12"></line>
+                  <line y2="12" y1="12" x2="19" x1="5"></line>
+                </svg>
+              </span>
+            </button>
+          </div>
         </div>
+        <ul class="notes-ul"></ul>
+      </div>
     </div>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
