--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="icons/icons8-create-100.png"
       type="image/x-icon"
     />
-    <title>Note</title>
+    <title>NoteCraft</title>
   </head>
   <body>
     <div class="container">
